Tue Feb 13 05:00:44 2001  George Lebl <jirka@5z.com>

	* tasklist_menu.c: make sure menu doesn't go off screen.

Mon Feb 12 21:25:33 2001  George Lebl <jirka@5z.com>

	* tasklist_applet.[ch], tasklist_menu.c, pixmaps.h: Remove some
	  unused code, fix warnings, remove function casts (they are evil)
	  and add wrappers instead.  Compiles without warning now.

	* tasklist_applet.c: In a fit of vanity, added self to the about box,
	  though at the bottom, so I don't feel like a total asshole.  While
	  I was looking through the function added my own touch of anality
	  and some null checking.

2001-02-04  Anders Carlsson  <andersca@codefactory.se>

	* tasklist_menu.c (cb_activate_task): Add function.
	(create_task_item): Make it possible to click-drag in a menu
	to activate a task.

	* tasklist_applet.c (real_layout_tasklist): If width > specified,
	set width = specified.

2001-01-30  jacob berkman  <jacob@ximian.com>

	* tasklist_menu.c (tasklist_group_popup):
	(create_task_item): add a seperator to the menu; tasks on the
	current desktop are before, tasks not on after (like that foobar
	task list)

2001-01-24  jacob berkman  <jacob@ximian.com>

	* tasklist*.[ch]: add shlibification and grouping by wmclass

2000-12-21  Richard Hult  <rhult@codefactory.se>

	* tasklist_applet.c (lexographic_compare_func): Sort correctly
	even if one of the tasks has no name (instead of just crashing).

Wed Dec 20 15:25:02 2000  George Lebl <jirka@5z.com>

	* tasklist_applet.[ch], tasklist_config.c, tasklist_properties.c:
	  Add an option so that the re-size never pushes other applets if
	  dynamic mode is on.

Wed Dec 20 14:27:54 2000  George Lebl <jirka@5z.com>

	* tasklist_applet.[ch], tasklist_config.c, tasklist_properties.c:
	  Fixups, optimizations of X traffic (this still needs work).  Add
	  BeOS like deskbar (I think) sort of mode.  In vertical mode you can
	  have the width be that of the longest window title.  So all you